--- a/assets/css/soporte.css
+++ b/assets/css/soporte.css
@@ -1,11 +1,12 @@
+
 .title{
     color: white;
     font-size: 2rem;
     font-weight: bold;
 }
 
-.container{
-    margin-top: 2rem;
+.menu-1{
+    margin-top: -97px
 }
 
 .card{
@@ -29,4 +30,10 @@
 
 .btn-success:hover{
     background-color: #00AD97;
+}
+
+
+.col-md-8.card.p-4.shadow {
+    width: 90%;
+    margin-bottom: 30px;
 }
