--- a/assets/css/desbloqueo.css
+++ b/assets/css/desbloqueo.css
@@ -33,36 +33,75 @@ p{
 }
 
 
-
-.navbar{
-    height: 100px;
-    background-color: #7D2686;
-    
+@import url('fonts.css');
+/* REVISEN LO QUE NOS MANDO YAPE PARA EL DISEÑO Y EL LOGO */
+body {
+    margin: 0;
+    padding: 0;
 }
 
-.navbar-collapse {
-    display: block;
+
+/* NAVBAR */
+header {
+
+    padding: 5px;
+}
+
+.container-fluid, nav.navbar.bg-body-tertiary.fixed-top.menu-2 {
+    background: linear-gradient(to right, rgb(181, 94, 190), rgb(62, 255, 226)), aqua;
+}
+
+
+nav.navbar.fixed-top.navbar-expand-lg {
+    padding: 0;
+}
+
+nav {
+    display: flex;
+    align-items: center;
+    height: 100px;
 }
 
 .logo {
-    height: 90px; 
+    height: 100px;
+    margin-left: 20px;
+    transition: transform 0.4s ease-in-out;
 }
 
-.navbar-nav .nav-link {
-    color: white;
-    font-weight: bold;
-    padding: 10px 15px;
-    transition: color 0.3s ease-in-out;
+.logo:hover {
+    transform: scale(1.2);
 }
 
-.navbar-nav .nav-link:hover {
-    color: #000000 
-}
-
-.navbar-nav {
+.menu1-ul {
+    margin: 0;
+    list-style: none;
     display: flex;
-    gap: 90px;
+    gap: 80px;
 }
+ 
+a.nav-link{
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    line-height: 60px;
+}
+
+a.nav-link:hover{
+    color: rgb(219, 185, 231);
+    text-decoration: none;
+    font-weight: bold;
+    line-height: 60px;
+}
+
+.menu-1{
+    height: 105px;
+}
+
+.menu-2{
+    display: none;
+    visibility: hidden;
+}
+
 
 .btn-desbloquear {
     padding: 14px 28px;
@@ -112,7 +151,39 @@ button#btn-desbloquear {
     left: 100%;
 }
 
+
 /* RESPONSIVIDAD */
+
+@media screen and (max-width: 1004px){
+    .menu-2{
+        visibility: visible;
+    }
+    .menu-1, .hero-image{
+        display: none;
+    }
+    .hero{
+        max-width: 1400px;
+        width: 100%;
+        margin: 50px 30px 0px 30px;
+    }
+    section.hero-content.mb-4 {
+        margin-top: 85px;
+    }
+}
+
+@media screen and (max-width: 890px){
+    .nav-links a{
+        font-size: 14px;
+    }
+    .nav-links a i{
+        font-size: 14px;
+    }
+    .category-button{
+        font-size: 10px;
+    }
+}
+
+
 @media (max-width: 992px) {
     .logo {
         height: 50px;
