--- a/assets/css/terminos.css
+++ b/assets/css/terminos.css
@@ -287,6 +287,38 @@ h2{
 
 
 /*RESPONSIVIDAD*/
+/* RESPONSIVE NAVBAR */
+
+@media screen and (max-width: 1004px){
+    .menu-2{
+        visibility: visible;
+    }
+    .menu-1, .hero-image{
+        display: none;
+    }
+    .hero{
+        max-width: 1400px;
+        width: 100%;
+        margin: 50px 30px 0px 30px;
+    }
+    section.hero-content.mb-4 {
+        margin-top: 85px;
+    }
+}
+
+@media screen and (max-width: 890px){
+    .nav-links a{
+        font-size: 14px;
+    }
+    .nav-links a i{
+        font-size: 14px;
+    }
+    .category-button{
+        font-size: 10px;
+    }
+}
+
+
 
 @media (max-width: 1024px) {
     .flex-child {
