--- a/assets/css/terminos.css
+++ b/assets/css/terminos.css
@@ -296,13 +296,8 @@ h2{
     .menu-1, .hero-image{
         display: none;
     }
-    .hero{
-        max-width: 1400px;
-        width: 100%;
-        margin: 50px 30px 0px 30px;
-    }
-    section.hero-content.mb-4 {
-        margin-top: 85px;
+    .tyc{
+        margin-top: 120px;
     }
 }
 
