--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -179,6 +179,10 @@ section.seguridad.container{
     border-radius: 20px;
 }
 
+.btn-close {
+    margin: 20px 0 -20px 10px !important;
+}
+
 .btn-bloqueo {
     padding: 14px 28px;
     border-radius: 12px;
